--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                 </div>
             </section>
 
-            <!-- Project Section (Always Visible) -->
+<!-- Project Section (Always Visible) -->
             <section class="section" id="project">
                 <div class="section-header">
                     <h2 class="section-title">
@@ -439,47 +439,66 @@
                     </h2>
                 </div>
                 <div class="section-content">
-                    <div class="card-grid">
-                        <a href="project-tnn-accelerator.html" target="_blank" class="card">
-                            <div class="card-content">
-                                <h3>Hardware Accelerator for Tiny Neural Networks</h3>
+                    <!-- Project Table -->
+                    <div class="project-table">
+                        <!-- Github Row -->
+                        <div class="project-row">
+                            <div class="project-row-label">Github:</div>
+                            <div class="project-row-items">
+                                <a href="project-tnn-accelerator.html" target="_blank" class="project-card">
+                                    <div class="project-card-content">
+                                        <h3>Hardware Accelerator for Tiny Neural Networks</h3>
+                                    </div>
+                                </a>
+                                <a href="project-fft-riscv.html" target="_blank" class="project-card">
+                                    <div class="project-card-content">
+                                        <h3>64pt FFT Accelerator with RISC-V</h3>
+                                    </div>
+                                </a>
+                                <a href="project-fft-zynq.html" target="_blank" class="project-card">
+                                    <div class="project-card-content">
+                                        <h3>128-point FFT on Xilinx Zynq-7000</h3>
+                                    </div>
+                                </a>
+                                <a href="project-CUDA.html" target="_blank" class="project-card">
+                                    <div class="project-card-content">
+                                        <h3>CUDA Programming</h3>
+                                    </div>
+                                </a>
+                                <a href="project-tictactoe.html" target="_blank" class="project-card">
+                                    <div class="project-card-content">
+                                        <h3>Tic-Tac-Toe Game</h3>
+                                    </div>
+                                </a>
+                                <a href="https://github.com/m1nwoooo" target="_blank" class="project-card github-link">
+                                    <div class="project-card-content">
+                                        <h3>🔗 GitHub 링크</h3>
+                                    </div>
+                                </a>
                             </div>
-                        </a>
-                        <a href="project-fft-riscv.html" target="_blank" class="card">
-                            <div class="card-content">
-                                <h3>64pt FFT Accelerator with RISC-V</h3>
+                        </div>
+                        
+                        <!-- Report Row -->
+                        <div class="project-row">
+                            <div class="project-row-label">Report:</div>
+                            <div class="project-row-items">
+                                <a href="project-helmet-system.html" target="_blank" class="project-card">
+                                    <div class="project-card-content">
+                                        <h3>Helmet-Mounted System</h3>
+                                    </div>
+                                </a>
+                                <a href="deep-learning.html" target="_blank" class="project-card">
+                                    <div class="project-card-content">
+                                        <h3>Deep Learning Study</h3>
+                                    </div>
+                                </a>
+                                <a href="#" target="_blank" class="project-card report-link">
+                                    <div class="project-card-content">
+                                        <h3>📄 보고서 링크</h3>
+                                    </div>
+                                </a>
                             </div>
-                        </a>
-                        <a href="project-fft-zynq.html" target="_blank" class="card">
-                            <div class="card-content">
-                                <h3>128-point FFT on Xilinx Zynq-7000</h3>
-                            </div>
-                        </a>
-                        <a href="project-CUDA.html" target="_blank" class="card">
-                            <div class="card-content">
-                                <h3>CUDA Programming</h3>
-                            </div>
-                        </a>
-                        <a href="project-helmet-system.html" target="_blank" class="card">
-                            <div class="card-content">
-                                <h3>Helmet-Mounted System</h3>
-                            </div>
-                        </a>
-                        <a href="deep-learning.html" target="_blank" class="card">
-                            <div class="card-content">
-                                <h3>Deep Learning Study</h3>
-                            </div>
-                        </a>
-                        <a href="project-tictactoe.html" target="_blank" class="card">
-                            <div class="card-content">
-                                <h3>Tic-Tac-Toe Game with Arduino & Python</h3>
-                            </div>
-                        </a>
-                        <a href="https://github.com/m1nwoooo" target="_blank" class="card">
-                            <div class="card-content">
-                                <h3>GitHub Repositories</h3>
-                            </div>
-                        </a>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -591,6 +610,7 @@
     </script>
 </body>
 </html>
+
 
 
 
