--- a/index.html
+++ b/index.html
@@ -494,6 +494,24 @@
                     </div>
                 </div>
             </section>
+                    <!-- Report Projects -->
+                    <div class="project-category">
+                        <h3 class="category-title">Report:</h3>
+                        <div class="card-grid">
+                            <a href="project-CUDA.html" target="_blank" class="card">
+                                <div class="card-content">
+                                    <h3>CUDA Programming</h3>
+                                </div>
+                            </a>
+                            <a href="deep-learning.html" target="_blank" class="card">
+                                <div class="card-content">
+                                    <h3>Deep Learning Study</h3>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <!-- Study Section (Always Visible) -->
             <section class="section" id="study">
                 <div class="section-header">
@@ -601,6 +619,7 @@
     </script>
 </body>
 </html>
+
 
 
 
