--- a/index.html
+++ b/index.html
@@ -443,39 +443,52 @@
                     <div class="project-category">
                         <h3 class="category-title">Github:</h3>
                         <div class="card-grid">
-                            <a href="project-tnn-accelerator.html" target="_blank" class="card">
+                            <a href="https://github.com/m1nwoooo" target="_blank" class="card">
                                 <div class="card-content">
                                     <h3>Hardware Accelerator for Tiny Neural Networks</h3>
                                 </div>
                             </a>
-                            <a href="project-fft-riscv.html" target="_blank" class="card">
+                            <a href="https://github.com/m1nwoooo" target="_blank" class="card">
                                 <div class="card-content">
                                     <h3>64pt FFT Accelerator with RISC-V</h3>
                                 </div>
                             </a>
-                            <a href="project-fft-zynq.html" target="_blank" class="card">
+                            <a href="https://github.com/m1nwoooo" target="_blank" class="card">
                                 <div class="card-content">
                                     <h3>128-point FFT on Xilinx Zynq-7000</h3>
                                 </div>
                             </a>
-                            <a href="project-helmet-system.html" target="_blank" class="card">
+                            <a href="https://github.com/m1nwoooo" target="_blank" class="card">
                                 <div class="card-content">
                                     <h3>Helmet-Mounted System</h3>
                                 </div>
                             </a>
-                            <a href="project-tictactoe.html" target="_blank" class="card">
-                                <div class="card-content">
-                                    <h3>Tic-Tac-Toe Game with Arduino & Python</h3>
-                                </div>
-                            </a>
                             <a href="https://github.com/m1nwoooo" target="_blank" class="card">
                                 <div class="card-content">
-                                    <h3>GitHub Repositories</h3>
+                                    <h3>Tic-Tac-Toe Game with Arduino & Python</h3>
                                 </div>
                             </a>
                         </div>
                     </div>
 
+                    <!-- Report Projects -->
+                    <div class="project-category">
+                        <h3 class="category-title">Report:</h3>
+                        <div class="card-grid">
+                            <a href="#" target="_blank" class="card">
+                                <div class="card-content">
+                                    <h3>CUDA Programming</h3>
+                                </div>
+                            </a>
+                            <a href="#" target="_blank" class="card">
+                                <div class="card-content">
+                                    <h3>Deep Learning Study</h3>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
                     <!-- Report Projects -->
                     <div class="project-category">
                         <h3 class="category-title">Report:</h3>
@@ -619,6 +632,7 @@
     </script>
 </body>
 </html>
+
 
 
 
