--- a/index.html
+++ b/index.html
@@ -429,7 +429,6 @@
                     </div>
                 </div>
             </section>
-
 <!-- Project Section (Always Visible) -->
             <section class="section" id="project">
                 <div class="section-header">
@@ -475,56 +474,22 @@
                     <div class="project-category">
                         <h3 class="category-title">Report:</h3>
                         <div class="card-grid">
-                            <a href="#" target="_blank" class="card">
-                                <div class="card-content">
-                                    <h3>CUDA Programming</h3>
-                                </div>
-                            </a>
-                            <a href="#" target="_blank" class="card">
+                            <a href="https://drive.google.com/file/d/1ZoB8By3Iw0-gClHRlm9DKWGAyK6683vR/view?usp=drive_link" target="_blank" class="card">
                                 <div class="card-content">
                                     <h3>Deep Learning Study</h3>
+                                </div>
+                            </a>
+                            <a href="https://drive.google.com/file/d/1F8t6rmt8UHgvu5_l9TOV6Rc_Jxk2G2iN/view?usp=drive_link" target="_blank" class="card">
+                                <div class="card-content">
+                                    <h3>CUDA Programming</h3>
                                 </div>
                             </a>
                         </div>
                     </div>
                 </div>
             </section>
-                    <!-- Report Projects -->
-                    <div class="project-category">
-                        <h3 class="category-title">Report:</h3>
-                        <div class="card-grid">
-                            <a href="project-CUDA.html" target="_blank" class="card">
-                                <div class="card-content">
-                                    <h3>CUDA Programming</h3>
-                                </div>
-                            </a>
-                            <a href="deep-learning.html" target="_blank" class="card">
-                                <div class="card-content">
-                                    <h3>Deep Learning Study</h3>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </section>
-                    <!-- Report Projects -->
-                    <div class="project-category">
-                        <h3 class="category-title">Report:</h3>
-                        <div class="card-grid">
-                            <a href="project-CUDA.html" target="_blank" class="card">
-                                <div class="card-content">
-                                    <h3>CUDA Programming</h3>
-                                </div>
-                            </a>
-                            <a href="deep-learning.html" target="_blank" class="card">
-                                <div class="card-content">
-                                    <h3>Deep Learning Study</h3>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </section>
+
+            
             <!-- Study Section (Always Visible) -->
             <section class="section" id="study">
                 <div class="section-header">
@@ -632,6 +597,7 @@
     </script>
 </body>
 </html>
+
 
 
 
