--- a/index.html
+++ b/index.html
@@ -437,27 +437,27 @@
                     <div class="project-category">
                         <h3 class="category-title">Github:</h3>
                         <div class="card-grid">
-                            <a href="https://github.com/m1nwoooo" target="_blank" class="card">
+                            <a href="https://github.com/m1nwoooo/AI_AcceleratorDesign" target="_blank" class="card">
                                 <div class="card-content">
                                     <h3>Hardware Accelerator for Tiny Neural Networks</h3>
                                 </div>
                             </a>
-                            <a href="https://github.com/m1nwoooo" target="_blank" class="card">
+                            <a href="https://github.com/m1nwoooo/MicroprocessorApplication" target="_blank" class="card">
                                 <div class="card-content">
                                     <h3>64pt FFT Accelerator with RISC-V</h3>
                                 </div>
                             </a>
-                            <a href="https://github.com/m1nwoooo" target="_blank" class="card">
+                            <a href="https://github.com/m1nwoooo/128pt_FFT_verilog_ZYNQ" target="_blank" class="card">
                                 <div class="card-content">
                                     <h3>128-point FFT on Xilinx Zynq-7000</h3>
                                 </div>
                             </a>
-                            <a href="https://github.com/m1nwoooo" target="_blank" class="card">
+                            <a href="https://github.com/m1nwoooo/2025ESWContest_free_1174" target="_blank" class="card">
                                 <div class="card-content">
-                                    <h3>Helmet-Mounted System</h3>
+                                    <h3>Embedded SoftWare Contest</h3>
                                 </div>
                             </a>
-                            <a href="https://github.com/m1nwoooo" target="_blank" class="card">
+                            <a href="https://github.com/m1nwoooo/TicTacToe_Mini_Game" target="_blank" class="card">
                                 <div class="card-content">
                                     <h3>Tic-Tac-Toe Game with Arduino & Python</h3>
                                 </div>
@@ -590,3 +590,4 @@
     </script>
 </body>
 </html>
+
