--- a/index.html
+++ b/index.html
@@ -478,6 +478,11 @@
                                     <h3>CUDA Programming</h3>
                                 </div>
                             </a>
+                            <a href="https://drive.google.com/file/d/1wohDgZ_uoOcOPX8HOFBZNzyNOU7HVuKT/view?usp=sharing" target="_blank" class="card">
+                                <div class="card-content">
+                                    <h3>NLP Seminar</h3>
+                                </div>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -590,4 +595,5 @@
     </script>
 </body>
 </html>
+
 
