--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                         <div class="card-grid">
                             <a href="https://drive.google.com/file/d/1ZoB8By3Iw0-gClHRlm9DKWGAyK6683vR/view?usp=drive_link" target="_blank" class="card">
                                 <div class="card-content">
-                                    <h3>Deep Learning Study</h3>
+                                    <h3>Deep Learning</h3>
                                 </div>
                             </a>
                             <a href="https://drive.google.com/file/d/1F8t6rmt8UHgvu5_l9TOV6Rc_Jxk2G2iN/view?usp=drive_link" target="_blank" class="card">
@@ -595,5 +595,6 @@
     </script>
 </body>
 </html>
+
 
 
