--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                     <div class="cv-item">
                         <h4>학문적 배경 및 자기소개</h4>
                         <div class="description">
-                            안녕하세요. 건국대학교 전기전자공학과에 재학 중인 조민우입니다. 하드웨어와 소프트웨어의 경계에서 효율적인 시스템을 설계하는 것에 큰 흥미를 느끼며, 특히 AI 기술이 하드웨어 레벨에서 어떻게 최적화될 수 있는지에 대해 깊이 탐구하고 있습니다. 
+                            안녕하세요. 건국대학교 전기전자공학과에 재학 중인 조민우입니다. 하드웨어와 소프트웨어의 경계에서 효율적인 시스템을 설계하는 것에 큰 흥미를 느끼며, 특히 AI 기술이 하드웨어 레벨에서 어떻게 최적화될 수 있는지에 대해 깊이 탐구하고 있습니다. 또한, 차세대 컴퓨팅인 양자 컴퓨팅 시스템을 지원하는 디지털 회로 아키텍처에 관심있습니다.
                             <br><br>
                             전기전자공학 전공을 통해 디지털 회로 설계, 컴퓨터 아키텍처, 마이크로프로세서 등의 하드웨어 기초 지식을 쌓았으며, C/C++, Python 등의 프로그래밍 언어를 활용한 시스템 개발 경험을 보유하고 있습니다.
                         </div>
@@ -399,33 +399,19 @@
                             <strong>🚀 딥러닝 가속기 설계</strong><br>
                             신경망 연산을 효율적으로 처리할 수 있는 전용 하드웨어 가속기 설계에 관심이 있습니다. 특히 Tiny Neural Network를 위한 저전력, 고효율 가속기 개발을 통해 엣지 디바이스에서의 AI 추론 성능을 향상시키는 프로젝트를 경험한 바 있습니다.
                             <br><br>
+                            <strong>⚛️ 양자 컴퓨팅에서의 디지털 회로 설계</strong><br>
+                            양자 컴퓨터의 제어 및 측정을 위한 디지털 회로 설계에 관심이 있습니다. 양자 비트 제어 신호 생성, 에러 정정을 위한 실시간 피드백 회로, 양자-고전 하이브리드 시스템의 인터페이스 설계 등 양자 컴퓨팅 시스템을 지원하는 디지털 회로 아키텍처에 관심 있습니다.
+                            <br><br>
                             <strong>📱 임베디드 소프트웨어 경진대회 & 캡스톤 디자인</strong><br>
                             "소방관 시야지원 헬멧을 주제로" 임베디드환경(라즈베리파이)에서의 이미지처리, 하드웨어와 소프트웨어의 협업 등을 경험하고 있습니다.
                             <br><br>
                             <strong>⚡ 저전력 SoC (System on Chip)</strong><br>
                             IoT 및 모바일 환경에서 요구되는 저전력 SoC 설계 및 최적화에 대해 관심 있습니다. 전력 효율성과 성능 간의 균형을 맞추는 아키텍처 설계에 특별한 관심을 가지고 있습니다.
                             <br><br>
-                            <strong>🔧 임베디드 시스템</strong><br>
-                            RISC-V 기반 프로세서와 FPGA를 활용한 실시간 시스템 개발,하드웨어 구현 등 임베디드 시스템 전반에 걸친 프로젝트를 진행한 바 있습니다.
-                            <br><br>
-                            <strong>🧟‍♂️ AI 모델</strong><br>
-                            다양한 AI 모델들에 관심있으며 edge device에서의 AI 추론 능력 향상 하드웨어 구현에 관심있습니다.
+
                         </div>
                     </div>
 
-                    <div class="cv-item">
-                        <h4>연구실 지원 동기 및 연구 계획</h4>
-                        <div class="description">
-                            현재 AI 기술의 급속한 발전과 함께 하드웨어 가속의 중요성이 더욱 커지고 있습니다. 특히 임베디드 환경에서는 제한된 전력과 면적 내에서 최대의 성능을 끌어내는 것이 핵심 과제입니다.
-                            <br><br>
-                            <strong>연구 목표:</strong><br>
-                            • 차세대 AI 가속기 아키텍처 설계 및 검증<br>
-                            • 저전력 신경망 추론을 위한 하드웨어-소프트웨어 협업 최적화<br>
-                            • RISC-V 기반 커스텀 프로세서 설계를 통한 도메인 특화 가속기 개발<br>
-                            <br><br>
-                            궁극적으로는 학계와 산업계에서 실제로 활용될 수 있는 혁신적인 하드웨어 솔루션을 개발하여, AI 기술의 대중화와 접근성 향상에 기여하고 싶습니다.
-                        </div>
-                    </div>
                 </div> </section> <section class="section" id="project">
                 <div class="section-header">
                     <h2 class="section-title">
@@ -595,6 +581,7 @@
     </script>
 </body>
 </html>
+
 
 
 
