--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
             <header class="welcome">
                 <h1>Welcome To My Personal Page :)</h1>
                 <p><strong>(About Me)</strong> 학문적 배경과 연구 관심 분야에 대한 소개입니다.</p>
-                <p><strong>(Project)</strong> 지금까지 진행한 프로젝트 및 스터디 자료입니다.</p>
+                <p><strong>(Project)</strong> 지금까지 진행한 프로젝트 및 스터디, 세미나 자료입니다.</p>
                 <p><strong>(Study)</strong> 수업 내용을 바탕으로 개인적으로 정리한 Notion 페이지입니다.</p>
             </header>
 
@@ -581,6 +581,7 @@
     </script>
 </body>
 </html>
+
 
 
 
