--- a/index.html
+++ b/index.html
@@ -412,7 +412,10 @@
                         </div>
                     </div>
 
-                </div> </section> <section class="section" id="project">
+                </div>
+            </section>
+
+            <section class="section" id="project">
                 <div class="section-header">
                     <h2 class="section-title">
                         <i data-lucide="rocket"></i>
@@ -483,37 +486,83 @@
                     </h2>
                 </div>
                 <div class="section-content">
-                    <div class="card-grid">
-                        <a href="https://sun-purpose-c0c.notion.site/AI-1d04f27643138045be59d4536503d390?source=copy_link" target="_blank" class="card">
-                            <div class="card-content">
-                                <h3>AI Accelerator Design</h3>
-                            </div>
-                        </a>
-                        <a href="https://sun-purpose-c0c.notion.site/1ad4f2764313807c9d7dd08e55221ca4?source=copy_link" target="_blank" class="card">
-                            <div class="card-content">
-                                <h3>Microprocessor Application</h3>
-                            </div>
-                        </a>
-                        <a href="https://sun-purpose-c0c.notion.site/793c466d4aa6479f882f0d48447406df?source=copy_link" target="_blank" class="card">
-                            <div class="card-content">
-                                <h3>Computer Architecture</h3>
-                            </div>
-                        </a>
-                        <a href="https://sun-purpose-c0c.notion.site/9790f1ab12eb4c38926583c922dd805f?source=copy_link" target="_blank" class="card">
-                            <div class="card-content">
-                                <h3>Logic Circuits</h3>
-                            </div>
-                        </a>
-                        <a href="https://sun-purpose-c0c.notion.site/1-2efff2ce0b8446c982723cb0864208bf?source=copy_link" target="_blank" class="card">
-                            <div class="card-content">
-                                <h3>Electronic Circuit 1</h3>
-                            </div>
-                        </a>
-                        <a href="https://sun-purpose-c0c.notion.site/2-1ad4f2764313806ca6afd10427516199?source=copy_link" target="_blank" class="card">
-                            <div class="card-content">
-                                <h3>Electronic Circuit 2</h3>
-                            </div>
-                        </a>
+                    <div class="project-category">
+                        <h3 class="category-title">3-2:</h3>
+                        <div class="card-grid">
+                            <a href="#" target="_blank" class="card">
+                                <div class="card-content">
+                                    <h3>AI시스템설계</h3>
+                                </div>
+                            </a>
+                            <a href="#" target="_blank" class="card">
+                                <div class="card-content">
+                                    <h3>AI디지털집적회로</h3>
+                                </div>
+                            </a>
+                            <a href="#" target="_blank" class="card">
+                                <div class="card-content">
+                                    <h3>딥러닝의 이해</h3>
+                                </div>
+                            </a>
+                            <a href="#" target="_blank" class="card">
+                                <div class="card-content">
+                                    <h3>인공지능심화</h3>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="project-category">
+                        <h3 class="category-title">3-1:</h3>
+                        <div class="card-grid">
+                            <a href="https://sun-purpose-c0c.notion.site/AI-1d04f27643138045be59d4536503d390?source=copy_link" target="_blank" class="card">
+                                <div class="card-content">
+                                    <h3>AI가속기설계</h3>
+                                </div>
+                            </a>
+                            <a href="https://sun-purpose-c0c.notion.site/1ad4f2764313807c9d7dd08e55221ca4?source=copy_link" target="_blank" class="card">
+                                <div class="card-content">
+                                    <h3>마이크로프로세서응용</h3>
+                                </div>
+                            </a>
+                            <a href="https://sun-purpose-c0c.notion.site/2-1ad4f2764313806ca6afd10427516199?source=copy_link" target="_blank" class="card">
+                                <div class="card-content">
+                                    <h3>전자회로2</h3>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="project-category">
+                        <h3 class="category-title">2-2:</h3>
+                        <div class="card-grid">
+                            <a href="https://sun-purpose-c0c.notion.site/1-2efff2ce0b8446c982723cb0864208bf?source=copy_link" target="_blank" class="card">
+                                <div class="card-content">
+                                    <h3>전자회로1</h3>
+                                </div>
+                            </a>
+                            <a href="https://sun-purpose-c0c.notion.site/793c466d4aa6479f882f0d48447406df?source=copy_link" target="_blank" class="card">
+                                <div class="card-content">
+                                    <h3>컴퓨터구조</h3>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="project-category">
+                        <h3 class="category-title">2-1:</h3>
+                        <div class="card-grid">
+                            <a href="https://sun-purpose-c0c.notion.site/9790f1ab12eb4c38926583c922dd805f?source=copy_link" target="_blank" class="card">
+                                <div class="card-content">
+                                    <h3>논리회로</h3>
+                                </div>
+                            </a>
+                            <a href="#" target="_blank" class="card">
+                                <div class="card-content">
+                                    <h3>컴퓨터프로그래밍2</h3>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -581,9 +630,3 @@
     </script>
 </body>
 </html>
-
-
-
-
-
-
