--- a/index.html
+++ b/index.html
@@ -416,12 +416,11 @@
             </section>
 
             <section class="section collapsed" id="project">
-                <div class="section-header collapsible" onclick="toggleSection('project')">
+                <div class="section-header">
                     <h2 class="section-title">
                         <i data-lucide="rocket"></i>
                         Project
                     </h2>
-                    <i data-lucide="chevron-down" class="toggle-icon"></i>
                 </div>
                 <div class="section-content">
                     <div class="project-category">
@@ -480,35 +479,24 @@
 
             
             <section class="section collapsed" id="study">
-                <div class="section-header collapsible" onclick="toggleSection('study')">
+                <div class="section-header">
                     <h2 class="section-title">
                         <i data-lucide="notebook-tabs"></i>
                         Study
                     </h2>
-                    <i data-lucide="chevron-down" class="toggle-icon"></i>
                 </div>
                 <div class="section-content">
                     <div class="project-category">
                         <h3 class="category-title">3-2:</h3>
                         <div class="card-grid">
-                            <a href="#" target="_blank" class="card">
+                            <a href="https://sun-purpose-c0c.notion.site/AI-2674f27643138059a698d6ad3c1599f7?pvs=73" target="_blank" class="card">
                                 <div class="card-content">
                                     <h3>AI시스템설계</h3>
                                 </div>
                             </a>
-                            <a href="#" target="_blank" class="card">
+                            <a href="https://sun-purpose-c0c.notion.site/AI-2674f276431380c1ad47dd3c9cd3e42f?source=copy_link" target="_blank" class="card">
                                 <div class="card-content">
                                     <h3>AI디지털집적회로</h3>
-                                </div>
-                            </a>
-                            <a href="#" target="_blank" class="card">
-                                <div class="card-content">
-                                    <h3>딥러닝의 이해</h3>
-                                </div>
-                            </a>
-                            <a href="#" target="_blank" class="card">
-                                <div class="card-content">
-                                    <h3>인공지능심화</h3>
                                 </div>
                             </a>
                         </div>
@@ -559,7 +547,7 @@
                                     <h3>논리회로</h3>
                                 </div>
                             </a>
-                            <a href="#" target="_blank" class="card">
+                            <a href="https://sun-purpose-c0c.notion.site/2-4484f61d774d486580dcce4a7aa0f0e1?pvs=74" target="_blank" class="card">
                                 <div class="card-content">
                                     <h3>컴퓨터프로그래밍2</h3>
                                 </div>
