--- a/index.html
+++ b/index.html
@@ -416,11 +416,12 @@
             </section>
 
             <section class="section collapsed" id="project">
-                <div class="section-header">
+                <div class="section-header collapsible" onclick="toggleSection('project')">
                     <h2 class="section-title">
                         <i data-lucide="rocket"></i>
                         Project
                     </h2>
+                    <i data-lucide="chevron-down" class="toggle-icon"></i>
                 </div>
                 <div class="section-content">
                     <div class="project-category">
@@ -479,11 +480,12 @@
 
             
             <section class="section collapsed" id="study">
-                <div class="section-header">
+                <div class="section-header collapsible" onclick="toggleSection('study')">
                     <h2 class="section-title">
                         <i data-lucide="notebook-tabs"></i>
                         Study
                     </h2>
+                    <i data-lucide="chevron-down" class="toggle-icon"></i>
                 </div>
                 <div class="section-content">
                     <div class="project-category">
