--- a/index.html
+++ b/index.html
@@ -427,6 +427,16 @@
                     <div class="project-category">
                         <h3 class="category-title">Github:</h3>
                         <div class="card-grid">
+                            <a href="https://github.com/m1nwoooo/AI_Digital_Integrated_Circuits" target="_blank" class="card">
+                                <div class="card-content">
+                                    <h3>Hierarchical ASIC Full Flow Design & Verification</h3>
+                                </div>
+                            </a>
+                            <a href="https://github.com/m1nwoooo/AI_System_Design" target="_blank" class="card">
+                                <div class="card-content">
+                                    <h3>Partitioning and Placement on Multi-core NoC Architecture</h3>
+                                </div>
+                            </a>
                             <a href="https://github.com/m1nwoooo/AI_AcceleratorDesign" target="_blank" class="card">
                                 <div class="card-content">
                                     <h3>Hardware Accelerator for Tiny Neural Networks</h3>
@@ -622,4 +632,3 @@
     </script>
 </body>
 </html>
-
