--- a/index.html
+++ b/index.html
@@ -447,6 +447,11 @@
                                     <h3>128-point FFT on Xilinx Zynq-7000</h3>
                                 </div>
                             </a>
+                            <a href="https://github.com/m1nwoooo/AdvancedAI" target="_blank" class="card">
+                                <div class="card-content">
+                                    <h3>Image Deblurring using U-Net Architecture</h3>
+                                </div>
+                            </a>
                             <a href="https://github.com/m1nwoooo/2025ESWContest_free_1174" target="_blank" class="card">
                                 <div class="card-content">
                                     <h3>Embedded SoftWare Contest</h3>
@@ -632,4 +637,5 @@
     </script>
 </body>
 </html>
+
 
