--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                 </div>
                 <div class="section-content">
                     <div class="project-category">
-                        <h3 class="category-title">Github:</h3>
+                        <h3 class="category-title">HW:</h3>
                         <div class="card-grid">
                             <a href="https://github.com/m1nwoooo/AI_AcceleratorDesign" target="_blank" class="card">
                                 <div class="card-content">
@@ -447,14 +447,20 @@
                                     <h3>128-point FFT on Xilinx Zynq-7000</h3>
                                 </div>
                             </a>
-                            <a href="https://github.com/m1nwoooo/AdvancedAI" target="_blank" class="card">
-                                <div class="card-content">
-                                    <h3>Image Deblurring using U-Net Architecture</h3>
-                                </div>
-                            </a>
+                        </div>
+                    </div>
+
+                    <div class="project-category">
+                        <h3 class="category-title">SW:</h3>
+                        <div class="card-grid">
                             <a href="https://github.com/m1nwoooo/2025ESWContest_free_1174" target="_blank" class="card">
                                 <div class="card-content">
                                     <h3>Embedded SoftWare Contest</h3>
+                                </div>
+                            </a>
+                            <a href="https://github.com/m1nwoooo/AdvancedAI" target="_blank" class="card">
+                                <div class="card-content">
+                                    <h3>Image Deblurring using U-Net Architecture</h3>
                                 </div>
                             </a>
                             <a href="https://github.com/m1nwoooo/TicTacToe_Mini_Game" target="_blank" class="card">
@@ -637,5 +643,3 @@
     </script>
 </body>
 </html>
-
-
