--- a/index.html
+++ b/index.html
@@ -425,11 +425,16 @@
                 </div>
                 <div class="section-content">
                     <div class="project-category">
-                        <h3 class="category-title">HW:</h3>
+                        <h3 class="category-title">Digital Circuit Design:</h3>
                         <div class="card-grid">
                             <a href="https://github.com/m1nwoooo/AI_AcceleratorDesign" target="_blank" class="card">
                                 <div class="card-content">
                                     <h3>Hardware Accelerator for Tiny Neural Networks</h3>
+                                </div>
+                            </a>
+                            <a href="https://github.com/m1nwoooo/AI_Digital_Integrated_Circuits" target="_blank" class="card">
+                                <div class="card-content">
+                                    <h3>Hierarchical ASIC Full Flow Design & Verification</h3>
                                 </div>
                             </a>
                             <a href="https://github.com/m1nwoooo/AI_System_Design" target="_blank" class="card">
@@ -451,37 +456,16 @@
                     </div>
 
                     <div class="project-category">
-                        <h3 class="category-title">SW:</h3>
+                        <h3 class="category-title">Artificial Intelligence:</h3>
                         <div class="card-grid">
-                            <a href="https://github.com/m1nwoooo/2025ESWContest_free_1174" target="_blank" class="card">
-                                <div class="card-content">
-                                    <h3>Embedded SoftWare Contest</h3>
-                                </div>
-                            </a>
                             <a href="https://github.com/m1nwoooo/AdvancedAI" target="_blank" class="card">
                                 <div class="card-content">
                                     <h3>Image Deblurring using U-Net Architecture</h3>
                                 </div>
                             </a>
-                            <a href="https://github.com/m1nwoooo/TicTacToe_Mini_Game" target="_blank" class="card">
+                            <a href="https://drive.google.com/file/d/1wohDgZ_uoOcOPX8HOFBZNzyNOU7HVuKT/view?usp=sharing" target="_blank" class="card">
                                 <div class="card-content">
-                                    <h3>Tic-Tac-Toe Game with Arduino & Python</h3>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="project-category">
-                        <h3 class="category-title">Report:</h3>
-                        <div class="card-grid">
-                            <a href="https://github.com/m1nwoooo/AI_Digital_Integrated_Circuits" target="_blank" class="card">
-                                <div class="card-content">
-                                    <h3>Hierarchical ASIC Full Flow Design & Verification</h3>
-                                </div>
-                            </a>
-                            <a href="https://drive.google.com/file/d/1ZoB8By3Iw0-gClHRlm9DKWGAyK6683vR/view?usp=drive_link" target="_blank" class="card">
-                                <div class="card-content">
-                                    <h3>Deep Learning</h3>
+                                    <h3>NLP Seminar</h3>
                                 </div>
                             </a>
                             <a href="https://drive.google.com/file/d/1F8t6rmt8UHgvu5_l9TOV6Rc_Jxk2G2iN/view?usp=drive_link" target="_blank" class="card">
@@ -489,9 +473,25 @@
                                     <h3>CUDA Programming</h3>
                                 </div>
                             </a>
-                            <a href="https://drive.google.com/file/d/1wohDgZ_uoOcOPX8HOFBZNzyNOU7HVuKT/view?usp=sharing" target="_blank" class="card">
+                            <a href="https://drive.google.com/file/d/1ZoB8By3Iw0-gClHRlm9DKWGAyK6683vR/view?usp=drive_link" target="_blank" class="card">
                                 <div class="card-content">
-                                    <h3>NLP Seminar</h3>
+                                    <h3>Deep Learning</h3>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="project-category">
+                        <h3 class="category-title">Embedded SoftWare:</h3>
+                        <div class="card-grid">
+                            <a href="https://github.com/m1nwoooo/2025ESWContest_free_1174" target="_blank" class="card">
+                                <div class="card-content">
+                                    <h3>Embedded SoftWare Contest</h3>
+                                </div>
+                            </a>
+                            <a href="https://github.com/m1nwoooo/TicTacToe_Mini_Game" target="_blank" class="card">
+                                <div class="card-content">
+                                    <h3>Tic-Tac-Toe Game with Arduino & Python</h3>
                                 </div>
                             </a>
                         </div>
