--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                             </a>
                             <a href="https://drive.google.com/file/d/1ZoB8By3Iw0-gClHRlm9DKWGAyK6683vR/view?usp=drive_link" target="_blank" class="card">
                                 <div class="card-content">
-                                    <h3>Deep Learning</h3>
+                                    <h3>NLP Study</h3>
                                 </div>
                             </a>
                         </div>
@@ -643,3 +643,4 @@
     </script>
 </body>
 </html>
+
