--- a/index.html
+++ b/index.html
@@ -437,6 +437,11 @@
                                     <h3>Hierarchical ASIC Full Flow Design & Verification</h3>
                                 </div>
                             </a>
+                            <a href="https://github.com/m1nwoooo/RISC-V-CPU-Design" target="_blank" class="card">
+                                <div class="card-content">
+                                    <h3>RISC-V CPU Design</h3>
+                                </div>
+                            </a>
                             <a href="https://github.com/m1nwoooo/AI_System_Design" target="_blank" class="card">
                                 <div class="card-content">
                                     <h3>Partitioning and Placement on Multi-core NoC Architecture</h3>
@@ -643,4 +648,5 @@
     </script>
 </body>
 </html>
+
 
